--- a/resources/application.properties
+++ b/resources/application.properties
@@ -7,3 +7,24 @@ spring.datasource.password=1111
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+# C?u hình Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+#spring.data.redis.password=1111
+
+# c?u hình g?i mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hoangquangdo245@gmail.com  
+spring.mail.password=tutg pyik pojl jfzh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+logging.level.org.springframework.mail=DEBUG
+logging.level.org.springframework=DEBUG
+
+
+
