--- a/resources/application.properties
+++ b/resources/application.properties
@@ -21,6 +21,9 @@ spring.mail.password=tutg pyik pojl jfzh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.elasticsearch.uris=http://localhost:9200
+spring.elasticsearch.username=your_username
+spring.elasticsearch.password=your_password
 
 
 logging.level.org.springframework.mail=DEBUG
